--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,9 +10,9 @@
 <a href="/auth/login" class="btn btn-primary btn-block">Signup</a>
      {{/if}}
     {{#if isConnected}}
-    <a href="/auth/login" class="btn btn-primary btn-block">Start My Date!</a>
+    <a href="/location" class="btn btn-primary btn-block">Start My Date!</a>
     <br><br>
-    <a href="/auth/login" class="btn btn-primary btn-block">Check My Planned Date!</a>
+    <a href="/profile-page" class="btn btn-primary btn-block">Check My Planned Date!</a>
 
     {{/if}}
 
