--- a/views/price-range.hbs
+++ b/views/price-range.hbs
@@ -4,7 +4,7 @@
 <div class="container">
   <div class="row">
     <div class="col col-sm-6 text-center">
-      <a href="/price-range-1">
+      <a href="/date-options?lat={{lat}}&lng={{lng}}&kind={{kind}}&price=1">
       <i class="fas fa-piggy-bank fa-2x text-center" data-toggle="tooltip" data-placement="bottom" title="If you're a budget-friendly person"></i></a>
 
 
@@ -15,7 +15,7 @@
 
     </div>
     <div class="col col-sm-6 text-center">
-      <a href="/price-range-2">
+      <a href="/date-options?lat={{lat}}&lng={{lng}}&kind={{kind}}&price=2">
       <i class="fas fa-coins fa-2x text-center"  data-toggle="tooltip" data-placement="bottom" title="If you're just livin' the life"></i></a>
     </div>
   </div>
