--- a/views/show-map.hbs
+++ b/views/show-map.hbs
@@ -2,63 +2,30 @@
 
 <h1 class="text-center">Show User location</h1>
 
-  <div id="map" style="width:100%;height:500px"></div>
-
-<button onclick="getLocation()">Try It</button>
-</div>
-
-
-<script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.0.0/mapbox-gl-directions.js'></script>
-<link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.0.0/mapbox-gl-directions.css' type='text/css' />
-<div id='map'></div>
- 
-
+ <div id="map" style="width:100%;height:300px"></div>
 <script>
+  <div id="map" style="width:100%;height:500px"></div>
+  var map = new mapboxgl.Map({
+    container: 'map',
+    style: 'mapbox://styles/mapbox/streets-v11',
+    center: [-9.154041, 38.709537],
+    zoom: 12
+  });
 
-mapboxgl.accessToken = 'pk.eyJ1IjoiY2FybGFyc21lbmRlcyIsImEiOiJjanVsMWZtdjMwYTRvM3lvOGp5aWZ6cnJtIn0.xv9rm--YRNKdTJGHFYzi0g';
-var map = new mapboxgl.Map({
-container: 'map',
-style: 'mapbox://styles/mapbox/streets-v11',
-center: [39,-9],
-zoom: 13
-});
- 
-map.addControl(new MapboxDirections({
-accessToken: mapboxgl.accessToken
-}), 'top-left');
+  map.addControl(new MapboxGeocoder({
+    accessToken: mapboxgl.accessToken,
+    mapboxgl: mapboxgl
+  }));
 
-
-var x = document.getElementById("demo");
-var userLocation = []
-
-function getLocation() {
-  if (navigator.geolocation) {
-    navigator.geolocation.getCurrentPosition(showPosition);
-  } else { 
-    console.log("Geolocation is not supported by this browser.")
-  }
-}
-
-function showPosition(position) {
-  userLocation.push(position.coords.latitude, position.coords.longitude)
-  console.log(userLocation)
-  return userLocation
-}
-
-var marker = new mapboxgl.Marker({
-    draggable: false,
-     color:"red"
-     })
-     .setLngLat(userLocation)
-     .addTo(map);
-     
-     function onDragEnd() {
-     var lngLat = marker.getLngLat();
-     coordinates.style.display = 'block';
-     coordinates.innerHTML = 'Longitude: ' + lngLat.lng + '<br />Latitude: ' + lngLat.lat;
-     }
-     
-     marker.on('dragend', onDragEnd);
+  navigator.geolocation.getCurrentPosition(position => {
+        console.log(position.coords.latitude, position.coords.longitude)
+        document.querySelector("input[name=lat]").value = lat
+        document.querySelector("input[name=lng]").value = lng
+        map.setCenter([-9.154041, 38.709537])
+        map.setZoom(15)
+        var marker = new mapboxgl.Marker({color: 'red'}) // initialize a new marker
+        
+        .setLngLat([lng, lat]) // Marker [lng, lat] coordinates
+        .addTo(map);
 
 </script>
-
