--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,19 @@
+body {
+  padding: 0;
+  font: 18px 'Work Sans', sans-serif;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  justify-content: space-between; }
+
+footer {
+  background-color: #C11F43;
+  padding: 10px; }
+
+main {
+  flex-grow: 1;
+  padding: 10px; }
+
 /*!
  * Bootstrap v4.3.1 (https://getbootstrap.com/)
  * Copyright 2011-2019 The Bootstrap Authors
@@ -7020,10 +7036,6 @@ a.text-dark:hover, a.text-dark:focus {
     color: inherit;
     border-color: #dee2e6; } }
 
-body {
-  padding: 0px;
-  font: 18px "Lucida Grande", Helvetica, Arial, sans-serif; }
-
 a {
   color: #00B7FF; }
 
@@ -7041,7 +7053,7 @@ i:hover {
 
 .general-container {
   margin: 0 auto;
-  width: 90%;
+  width: 100%;
   display: flex;
   justify-content: center;
   flex-flow: column;
@@ -7071,15 +7083,21 @@ nav {
   color: white; }
 
 @media (max-width: 750px) {
+  .main-container-primary {
+    background-color: #C11F43;
+    padding: 15%;
+    margin: 0; }
+  .main-container-grey {
+    background-color: #414042; }
   .general-container {
     margin: 0 auto;
     width: 100%;
-    margin: 0 auto;
     padding: 0; }
   i {
     padding: 15%;
     margin: 15%; }
   body {
-    font: 24px "Lucida Grande", Helvetica, Arial, sans-serif; } }
+    padding: 0;
+    font-size: 24px; } }
 
 /*# sourceMappingURL=style.css.map */
