--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,18 +1,27 @@
 
-
+//choose primary here
 $primary: #C11F43;
 
-
-@import "../../node_modules/bootstrap/scss/bootstrap.scss";
-
-
 body {
-  padding: 0px;
-  font: 18px "Lucida Grande", Helvetica, Arial, sans-serif;
+  padding: 0;
+  font: 18px 'Work Sans', sans-serif;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  justify-content: space-between;
 }
 
-//choose primary here
+footer {
+  background-color: $primary;
+  padding: 10px;
+}
 
+main {
+  flex-grow: 1;
+  padding: 10px;
+}
+
+@import "../../node_modules/bootstrap/scss/bootstrap.scss";
 
 
 a {
@@ -35,7 +44,7 @@ i:hover{
 
 .general-container{
   margin:0 auto;
-  width:90%;
+  width:100%;
   display:flex;
   justify-content: center;
   flex-flow:column;
@@ -70,12 +79,20 @@ nav{
 }
 
 @media (max-width: 750px) {
+  .main-container-primary{
+    background-color: $primary;
+    padding:15%;
+    margin:0;
+  }
+
+  .main-container-grey{
+    background-color: #414042;
+  }
 
   .general-container {
     // background-color: yellow;
     margin:0 auto;
     width:100%;
-    margin:0 auto;
     padding:0;
     // background-color:yellow;
   }
@@ -86,7 +103,8 @@ nav{
   }
 
   body {
-    font: 24px "Lucida Grande", Helvetica, Arial, sans-serif;
+    padding:0;
+    font-size: 24px;
   }
 
 }
