--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,20 +1,24 @@
-<div class="general-container align-middle">
+<div class="main-container-primary h-100 w-100 align-middle">
+<div class="general-container">
     <h1 class="text-center"></h1>
-    <img src="images/brand _big.png" alt="brand-big" width="50%">
+    <img src="images/Brand_White_big.png" alt="brand-white" width="70%">
 
 {{#if isNotConnected}}
-<p>Login/Signup so you can costumize your date experience</p>
-<br><br>
-    <a href="/auth/login" class="btn btn-primary btn-block">Login</a>
+
+<br>
+    <a href="/auth/login" class="btn btn-light btn-block btn-lg font-weight-bold">Login</a>
+    <br>
+    <p class="text-center text-white">Don't have an account yet? <a href="/auth/signup">Signup</a></p>
     <br> <br>
-<a href="/auth/login" class="btn btn-primary btn-block">Signup</a>
+
      {{/if}}
     {{#if isConnected}}
-    <a href="/location" class="btn btn-primary btn-block">Start My Date!</a>
+    <a href="/location" class="btn btn-light btn-block btn-lg font-weight-bold">Start My Date!</a>
     <br><br>
-    <a href="/profile-page" class="btn btn-primary btn-block">Check My Planned Date!</a>
+    <a href="/profile-page" class="btn btn-outline-light btn-block btn-lg font-weight-bold">PROFILE</a>
 
     {{/if}}
 
 </div>
 
+</div>
