--- a/views/location.hbs
+++ b/views/location.hbs
@@ -1,26 +1,22 @@
+ <div class="main-container-grey h-100 w-100 align-middle">
  <div class="general-container">
-  <h1 class="text-center">Where are you right now?</h1><br>
-  <h5 class="text-center">Don't worry about the traffic: we'll only find places near you!</h5>
+
+  <h1 class="text-center text-white ">Where are you right now?</h1><br>
+  <h5 class="text-center text-white ">Don't worry about the traffic: we'll only find places near you!</h5>
   <br>
    <form action="/date-type" method="get">
     {{!-- <input type="text" class="form-control" name="address" placeholder="Type your address"> --}}
     <input type="hidden" name="lat">
     <input type="hidden" name="lng">
-    <button id="get-user-location" class="btn btn-primary">Get your location</button>
-    <br> <br>
-    <button type="submit" id="next-button" class="btn btn-outline-primary btn-block d-none">Next</button>
+    <button id="get-user-location" class="btn btn-primary  btn-block btn-lg font-weight-bold">Get your location</button>
+  
+    <button type="submit" id="next-button" class="btn btn-outline-primary btn-block d-none btn-block btn-lg font-weight-bold">Next</button>
    </form>
     <br>
-      <div id="map" style="width:100%;height:300px"></div>
+      <div id="map" style="width:100%;height:400px"></div>
    
-
-    {{!-- <br><br>
-    Tell us your date details!<input type="datetime" name="datetime" id="datetime">
-    <br><br>
-    <a class="btn btn-outline-dark" href="/date-type">Continue planning my date!</a> --}}
-
 </div>
-
+</div>
  
 <script>
 
