Commit to accept changes

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -12,7 +12,7 @@
     {{#if isConnected}}
     <a href="/location" class="btn btn-primary btn-block">Start My Date!</a>
     <br><br>
-    <a href="/profile-page" class="btn btn-primary btn-block">Check My Planned Date!</a>
+    <a href="/profile-page" class="btn btn-primary btn-block">Check My Planned Dates!</a>
 
     {{/if}}
 
