--- a/views/date-type.hbs
+++ b/views/date-type.hbs
@@ -3,25 +3,28 @@
 <h3 class="text-center">What kind of date are you looking for?</h3>
 
 <div class="container">
-  <div class="row">
-    <div class="col col-sm-4">
-      <a href="/price-range?lat={{lat}}&lng={{lng}}&kind=drink"><i class="fas fa-glass-martini-alt fa-3x text-center"></i></a>
+  <div class="row text-center">
+    <div class="col col-sm-6">
+      <a href="/price-range?lat={{lat}}&lng={{lng}}&kind=drink"><i class="material-icons md-48">face</i></a>
+      <i class="material-icons md-48 fa-3x ">face</i>
     </div>
-    <div class="col col-sm-4">
+    <div class="col col-sm-6">
       <a href="/price-range?lat={{lat}}&lng={{lng}}&kind=club"><i class="fas fa-music fa-3x text-center"></i></a>
     </div>
-    <div class="col col-sm-4">
+  </div>
+  <div class="row text-center">
+    <div class="col col-sm-6">
       <a href="/date-type-movie"><i class="fas fa-film fa-3x text-center"></i></a>
     </div>
-  </div>
-  <div class="row">
-    <div class="col col-sm-4">
+    <div class="col col-sm-6">
      <a href="/price-range?lat={{lat}}&lng={{lng}}&kind=dinner"><i class="fas fa-pizza-slice fa-3x text-center"></i></a>
     </div>
-    <div class="col col-sm-4">
+  </div>
+  <div class="row text-center">
+    <div class="col col-sm-6">
       <a href="/date-type-netflix"><i class="fas fa-couch fa-3x text-center"></i></a>
     </div>
-    <div class="col col-sm-4">
+    <div class="col col-sm-6">
       <a href="/price-range?lat={{lat}}&lng={{lng}}&kind=coffee"><i class="fas fa-mug-hot fa-3x text-center"></i></a>
     </div>
   </div>
