--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,11 +1,14 @@
+@import url('https://fonts.googleapis.com/css?family=Work+Sans');
 
 //choose primary here
 $primary: #C11F43;
+@import "../../node_modules/bootstrap/scss/bootstrap.scss";
 
 // Cinzento escuro: #414042
 // Cinzento claro: #E6E6E6
 // Vermelho: #C11F43
 
+//GENERAL STYLES-----------------------------------
 body {
   padding: 0;
   font: 18px 'Work Sans', sans-serif;
@@ -15,18 +18,24 @@ body {
   justify-content: space-between;
 }
 
-footer {
-  background-color: $primary;
-  padding: 10px;
-}
-
 main {
   flex-grow: 1;
-  padding: 10px;
+  padding: 0px;
 }
 
-@import "../../node_modules/bootstrap/scss/bootstrap.scss";
+footer {
+  background-color: $primary;
+  padding: 1vh;
+  min-height:1.5vh;
+}
 
+.navbarNav{
+  width:100%;
+}
+
+.around-icons{
+width:100%;
+}
 
 
 
@@ -39,7 +48,7 @@ main {
   align-content:center;
   align-items: center;
   padding:5%;
-  min-height:90vh;
+  min-height:75vh;
 }
 
 .marker {
@@ -60,6 +69,11 @@ main {
 }
 nav{
   font-size:20px;
+  // height:7vh;
+}
+
+nav ul {
+  width:100%;
 }
 
 .navbar-toggler{
@@ -69,12 +83,15 @@ nav{
 @media (max-width: 750px) {
   .main-container-primary{
     background-color: $primary;
-    padding:15%;
-    margin:0;
   }
-
   .main-container-grey{
     background-color: #414042;
+    min-height:90vh;
+    padding:0;
+  }
+  .main-container-primary,main-container-grey{
+    padding:15%;
+    margin:0;
   }
 
   .general-container {
@@ -85,16 +102,39 @@ nav{
     // background-color:yellow;
   }
 
-
   body {
     padding:0;
     font-size: 22px;
   }
 
-.icons-type-date{
-  width:100px;
 }
 
-.material-icons.md-48 { font-size: 48px; width:200px; }
+@media (min-width: 751px) {
+  .main-container-primary{
+    background-color: $primary;
+    padding:30%;
+    margin:0;
+  }
+
+ 
+
+  .general-container {
+    // background-color: yellow;
+    margin:0 auto;
+    width:100%;
+    padding:0 20%;
+    // background-color:yellow;
+  }
+
+
+  .main-container-grey{
+    background-color: #414042;
+    // min-height:85vh;
+  }
+
+  body {
+    padding:0;
+    font-size: 24px;
+  }
 
 }
