--- a/views/date-type.hbs
+++ b/views/date-type.hbs
@@ -1,33 +1,52 @@
+<div class="main-container-grey h-100 w-100 align-middle">
 <div class="general-container">
-  
-<h3 class="text-center">What kind of date are you looking for?</h3>
-
+  <br><br>
+<h2 class="text-center text-white">What kind of date are you looking for?</h2>
+<br><br><br>
 <div class="container">
-  <div class="row text-center">
+  <div class="row text-center text-white">
     <div class="col col-sm-6">
-      <a href="/price-range?lat={{lat}}&lng={{lng}}&kind=drink"><i class="material-icons md-48">face</i></a>
-      <i class="material-icons md-48 fa-3x ">face</i>
+      <a href="/price-range?lat={{lat}}&lng={{lng}}&kind=drink" class="around-icons"><i class="material-icons fa-3x md-48 text-white">local_bar</i></a>
+      <br>
+      bar
+      <br><br><br>
     </div>
     <div class="col col-sm-6">
-      <a href="/price-range?lat={{lat}}&lng={{lng}}&kind=club"><i class="fas fa-music fa-3x text-center"></i></a>
-    </div>
-  </div>
-  <div class="row text-center">
-    <div class="col col-sm-6">
-      <a href="/date-type-movie"><i class="fas fa-film fa-3x text-center"></i></a>
-    </div>
-    <div class="col col-sm-6">
-     <a href="/price-range?lat={{lat}}&lng={{lng}}&kind=dinner"><i class="fas fa-pizza-slice fa-3x text-center"></i></a>
+      <a href="/price-range?lat={{lat}}&lng={{lng}}&kind=club"><i class="material-icons fa-3x md-48 text-white">music_note</i></a>
+      <br>
+      night club
+      <br><br><br>
     </div>
   </div>
-  <div class="row text-center">
+  <div class="row text-center text-white">
     <div class="col col-sm-6">
-      <a href="/date-type-netflix"><i class="fas fa-couch fa-3x text-center"></i></a>
+      <a href="/date-type-movie"><i class="material-icons fa-3x md-48 text-white">local_movies</i></a>
+      <br>
+      cinema
+      <br><br><br>
     </div>
     <div class="col col-sm-6">
-      <a href="/price-range?lat={{lat}}&lng={{lng}}&kind=coffee"><i class="fas fa-mug-hot fa-3x text-center"></i></a>
+     <a href="/price-range?lat={{lat}}&lng={{lng}}&kind=dinner"><i class="material-icons fa-3x md-48 text-white">local_pizza</i></a>
+      <br>
+      snacks
+      <br><br><br>
+    </div>
+  </div>
+  <div class="row text-center text-white">
+    <div class="col col-sm-6">
+      <a href="/date-type-netflix"><i class="fas fa-couch fa-3x text-center text-white"></i></a>
+      <br>
+      netflix and chill
+      <br><br><br>
+    </div>
+    <div class="col col-sm-6">
+      <a href="/price-range?lat={{lat}}&lng={{lng}}&kind=coffee"><i class="fas fa-mug-hot text-center text-white fa-3x text-center"></i></a>
+    <br>
+    coffee
+    <br><br><br>    
     </div>
   </div>
 </div>
 
+</div>
 </div>
