--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,10 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>{{title}}</title>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link rel="stylesheet" href="/stylesheets/style.css" />
   <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
+
   <script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.0.0/mapbox-gl-geocoder.min.js'></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
  <script src="https://static-assets.mapbox.com/gl-pricing/dist/mapbox-gl.js"></script>
@@ -24,10 +25,10 @@
     {{!-- <a class="navbar-brand" href="/"></a> --}}
      <a href="/" id="nav-logo"  class="navbar-brand"> <img src="/images/Brand_White_Horizontal-04.svg" alt="brand-horizontal" height="100%"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav mr-auto">
+  <div class="collapse navbar-collapse bg-primary" id="navbarNav">
+    <ul class="navbar-nav mr-auto bg-primary">
     {{#if isNotConnected}}
     <li class="nav-item"><a class="nav-link text-white" href="/auth/login">Login <i class="fas fa-user-alt"></i></a></li>
     <li class="nav-item"><a class="nav-link text-white" href="/auth/signup">Signup</a></li>
@@ -50,7 +51,7 @@
   </main>
 
   <footer>
-   <small> <p class="text-center text-white text-bold">Developed With Love by SaveMyDate @ IronHack</p> </small>
+   <small> <p class="text-center text-white text-bold">Developed With <i class="fas fa-heart"></i> by SaveMyDate @ IronHack</p> </small>
   </footer>
 
 
