mvp visuals done

--- a/views/confirm-movie.hbs
+++ b/views/confirm-movie.hbs
@@ -1,22 +1,19 @@
-<div class="general-container">
-    <br>
-<h2>Confirm the details of your date</h2> 
-<br>
+<div class="main-container-grey h-100 w-100 align-middle px-1">
+<div class="general-container px-1">
+    <br><br>
+<h3 class="text-white">Confirm the details of your date</h3> 
+<br> <br>
 
 <div class="card" style="width: 18rem;">
   <img class="card-img-top" src="/images/cool_dog_cinema.jpeg" alt="Card image cap">
   <div class="card-body">
-        <h5 class="card-title"><strong>Cinema name: </strong>{{finalOption.name}}</h5>
-        <p class="card-text"><strong>Address: </strong>{{finalOption.address}}</p>
-        <p class="card-text"><strong>Website: </strong>{{finalOption.website}}</p>
-        <a class="btn btn-danger text-center" href="/profile-page">  SAVE MY DATE!  </a>
+        <h5 class="card-title text-primary font-weight-bold">{{finalOption.name}}</h5>
+        <p class="card-text"><i class="fas fa-map-marker-alt"></i> {{finalOption.address}}</p>
+        <p class="card-text"><i class="fas fa-wifi"></i> <a href="{{finalOption.website}}">Go to website</a></p>
+        <a class="btn btn-primary btn-block text-center" href="/profile-page">  SAVE MY DATE!  </a>
   </div>
 </div>
-
-
-
 <br>
-
-
-
+<br>
+</div>
 </div>
