--- a/views/confirm-netflix.hbs
+++ b/views/confirm-netflix.hbs
@@ -1,23 +1,19 @@
-<div class="general-container">
-    <br>
-<h2>Confirm the details of your movie date</h2> 
-<br><br><br>
-<a href="/location" class="btn btn-outline-warning btn-block ">Never mind - I want to try other options!</a>
+<div class="main-container-grey h-100 w-100 align-middle px-1">
+  <div class="general-container px-1">
+    <br><br>
+<h3 class="text-white">Confirm the details of your movie date</h3> 
 <br><br>
 
 <div class="card" style="width: 18rem;">
   <img class="card-img-top" src="/images/cool_dog_cinema.jpeg" alt="Card image cap">
   <div class="card-body">
-        <h5 class="card-title"><strong>Movie: </strong>{{finalOption.title}}</h5>
+        <h5 class="card-title text-primary font-weight-bold">Movie: {{finalOption.title}}</h5>
         <p class="card-text"><strong>Year: </strong>{{finalOption.year}}</p>
         <p class="card-text"><strong>Duration: </strong>{{finalOption.duration}}</p>
         <p class="card-text"><strong>Director: </strong>{{finalOption.director}}</p>
-        <a class="btn btn-danger text-center" href="/profile-page">  SAVE MY DATE!  </a>
+        <a class="btn btn-primary btn-block text-center" href="/profile-page">  SAVE MY DATE!  </a>
   </div>
 </div>
-
-
 <br>
-
-
+</div>
 </div>
