--- a/views/price-range.hbs
+++ b/views/price-range.hbs
@@ -1,24 +1,18 @@
-<div class="general-container">
-<h1 class="text-center">Choose based on the cost</h1>
-
+<div class="main-container-grey h-100 w-100 align-middle px-2">
+<div class="general-container  px-4">
+<h2 class="text-center text-white">Choose based on the cost</h2>
+<br><br>
 <div class="container">
   <div class="row">
     <div class="col col-sm-6 text-center">
-      <a href="/date-options?lat={{lat}}&lng={{lng}}&kind={{kind}}&price=1">
-      <i class="fas fa-piggy-bank fa-2x text-center" data-toggle="tooltip" data-placement="bottom" title="If you're a budget-friendly person"></i></a>
-
-
-      {{!-- <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Tooltip on bottom">
-  Tooltip on bottom
-</button> --}}
-
-
+      <a href="/date-options?lat={{lat}}&lng={{lng}}&kind={{kind}}&price=1" class="btn btn-lg btn-block btn-light text-primary" data-toggle="tooltip" data-placement="bottom" title="If you're a budget-friendly person">
+      $</a>
     </div>
     <div class="col col-sm-6 text-center">
-      <a href="/date-options?lat={{lat}}&lng={{lng}}&kind={{kind}}&price=2">
-      <i class="fas fa-coins fa-2x text-center"  data-toggle="tooltip" data-placement="bottom" title="If you're just livin' the life"></i></a>
+      <a href="/date-options?lat={{lat}}&lng={{lng}}&kind={{kind}}&price=2"  class="btn btn-lg btn-block btn-light text-primary" data-toggle="tooltip" data-placement="bottom" title="If you're just livin' the life">$$$</a>
     </div>
   </div>
+</div>
 </div>
 </div>
 </div>
