--- a/views/confirm-date.hbs
+++ b/views/confirm-date.hbs
@@ -1,22 +1,21 @@
-<div class="general-container">
+<div class="main-container-grey h-100 w-100 align-middle px-1">
+<div class="general-container px-1">  
 
-
-<h2>Confirm the details of your date</h2> 
-
-
+<br><br>
+<h3 class="text-white">Confirm the details of your date</h3> 
+<br><br>
 <div class="card" style="width: 18rem;">
   <img class="card-img-top" src="/images/cool_dog.jpeg" alt="Card image cap">
   <div class="card-body">
-    <h5 class="card-title">{{finalOption.name}}</h5>
+    <h5 class="card-title text-primary font-weight-bold"><strong> {{finalOption.name}}</strong></h5>
     <p class="card-text"><strong>Rating: </strong>{{finalOption.rating}}</p>
     <p class="card-text"><strong>Cuisines: </strong>{{finalOption.cuisines}}</p>
     <p class="card-text"><strong>Average cost for 2: </strong>{{finalOption.average_cost_for_two}}€</p>
     <p class="card-text"><strong>Address: </strong>{{finalOption.location.address}}</p>
-    
+<a class="btn btn-primary btn-block text-center" href="/confirm-date?finalOption={{value}}">  SAVE MY DATE!  </a>    
   </div>
 </div>
-<br><br>
-<a class="btn btn-danger btn-call-to-action btn-block" href="/confirm-date?finalOption={{value}}">  SAVE MY DATE!  </a>
-
 <br>
+<br>
+</div>
 </div>
