--- a/views/profile-page.hbs
+++ b/views/profile-page.hbs
@@ -1,11 +1,19 @@
-<div class="general-container">
-<h1>Your Profile</h1>
+<div class="main-container-grey h-100 w-100 align-middle px-4 text-white">
+<div class="general-container text-white">
+<br><br>
 
-<p>E-mail: {{user.email}}</p>  
+<div class="card w-75">
+  <div class="card-body text-black-50">
+    <h3 class="card-title text-center text-primary"><i class="fas fa-user-circle"></i> My Profile</h3>
+    <p class="card-text"><p>E-mail: {{user.email}}</p> 
+    <p class="card-text">Name: {{user.name}}</p>
+    
+  </div>
+</div>
 
-<hr>
+<br><br>
 
-<h2>My Dates</h2>
+<h3 class="text-center text-primary">My Dates</h3>
 <br>
 <ul>
 {{#each userDates}}
@@ -39,3 +47,4 @@
 </ul>
 
 <br>
+</div>
