before carla's layout changes

--- a/views/secret.hbs
+++ b/views/secret.hbs
@@ -1,13 +1,8 @@
 <div class="general-container">
-<h1>Your Profile</h1>
+<h1>Choose your favorite TA to hang out with</h1>
 
-<p>E-mail: {{user.email}}</p>  
 
-<hr>
 
-<h2>My Dates</h2>
-<br>
-<ul>
 {{#each userDates}}
 <b>Location:</b> {{this.date_location_name}} <br>
 {{#if this.cuisines}}
@@ -25,10 +20,12 @@
 <a href="/location" class="btn btn-outline-success">Save another Date!</a>
 <a href="/{{this._id}}/delete" class="btn btn-outline-danger">Delete</a>
 
+<h2>Joaquim</h2>
 <form action="/send-email" method="post">
+<h2>Mostafa</h2>
   <label for=""><b>Email:</b></label>
-  <input type="email" name="email" id="" placeholder="Your date e-mail here">
-  <input type="time" name="dateTime">
+  <input type="email" name="email" id="" >
+  <input type="time" name="dateTime" value="">
   <input type="hidden" value="{{this._id}}" name="dateId">
 <button class="btn btn-info" type="submit">Send details to my Date!</button>
 </form>
