Changed the return button

--- a/views/date-type-netflix.hbs
+++ b/views/date-type-netflix.hbs
@@ -5,7 +5,7 @@
 <br>
 <h3 class="font-italic text-white">(Is it really about the movie?)</h3>
 <br><br><br>
-<a href="/location" class="btn btn-outline-warning btn-lg"><strong><p><i class="fas fa-arrow-left"></i>   Never mind</p></strong> <p>I want to try other date options!</p></a>
+<a href="/date-type?lat={{lat}}&lng={{lng}}" class="btn btn-outline-warning btn-lg"><strong><p><i class="fas fa-arrow-left"></i>   Never mind</p></strong> <p>I want to try other date options!</p></a>
 <br><br>
 
 <div id="accordion">
