--- a/views/date-type.hbs
+++ b/views/date-type.hbs
@@ -20,7 +20,7 @@
   </div>
   <div class="row text-center text-white">
     <div class="col col-sm-6">
-      <a href="/date-type-movie"><i class="material-icons fa-3x md-48 text-white">local_movies</i></a>
+      <a href="/date-type-movie?lat={{lat}}&lng={{lng}}"><i class="material-icons fa-3x md-48 text-white">local_movies</i></a>
       <br>
       cinema
       <br><br><br>
@@ -34,7 +34,7 @@
   </div>
   <div class="row text-center text-white">
     <div class="col col-sm-6">
-      <a href="/date-type-netflix"><i class="fas fa-couch fa-3x text-center text-white"></i></a>
+      <a href="/date-type-netflix?lat={{lat}}&lng={{lng}}"><i class="fas fa-couch fa-3x text-center text-white"></i></a>
       <br>
       netflix and chill
       <br><br><br>
