--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -37,10 +37,10 @@
     <li class="nav-item"><a class="nav-link text-white" href="/profile-page">Profile</a></li>
     <li class="nav-item"><a class="nav-link text-white" href="/auth/logout">Logout <i class="fas fa-user-alt-slash"></i></a></li>
     {{/if}}
-    <li class="nav-item"><a class="nav-link text-white" href="/date-type">Date Type</a></li>
+    {{!-- <li class="nav-item"><a class="nav-link text-white" href="/date-type">Date Type</a></li>
     <li class="nav-item"><a class="nav-link text-white" href="/date-options">Date Options</a></li>
     <li class="nav-item"><a class="nav-link text-white" href="/price-range">Average Cost</a></li>
-    <li class="nav-item"><a class="nav-link text-white" href="/location">Location</a></li>
+    <li class="nav-item"><a class="nav-link text-white" href="/location">Location</a></li> --}}
       </div>
 </ul>
   </nav>
