User name added, email with user information

--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -11,12 +11,12 @@
     
 <form action="/auth/login" method="POST" id="form-container">
   <div class="form-group text-white text-bold">
-  <label for="email">e-mail</label>
+  <label for="email">E-mail</label>
   <input id="email" type="text" name="email" placeholder="Your e-mail here"  class="form-control" >
 </div>
 
 <div class="form-group text-white text-bold">
-  <label for="password">password</label>
+  <label for="password">Password</label>
   <input id="password" type="password" name="password" placeholder="Your password">
  </div>
 
