--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -15,6 +15,11 @@
   <input id="email" type="text" name="email" placeholder="Your e-mail here">
   <small id="emailHelp" class="form-text text-white form-text">We'll never share your email with anyone else.</small>
 </div>
+
+<div class="form-group text-white text-bold">
+  <label for="email">Name</label>
+  <input id="name" type="text" name="name" placeholder="Your name here"  class="form-control" >
+</div>
  
 <div class="form-group text-white text-bold">
   <label for="password">Password</label>
